# dapr-workflow

./: .gitignore  README.md  dapr.yaml  docker-compose.yml
analyze/: .env.example  agent.py  app.py  pyproject.toml
components/: blobstore.yaml
docs/: how-it-works.html
process/: app.py  pyproject.toml  workflow.py
sample/: invoice.html  odyssey-schema.json  schema.json
ui/: index.html
upload/: app.py  pyproject.toml
