[project]
name = "analyze"
version = "0.1.0"
description = "Analyze service: subscribes to analysis requests and runs a LangChain deep agent as a durable Dapr workflow"
requires-python = ">=3.12"
dependencies = [
    "dapr>=1.15.0",
    "dapr-ext-fastapi>=1.15.0",
    "diagrid[deepagents]==0.4.2",
    "fastapi>=0.115.0",
    "langchain-openai>=1.2.1",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]
