[project]
name = "process"
version = "0.1.0"
description = "Process service: subscribes to processing requests and runs a Dapr workflow (retrieve -> convert -> extract -> write)"
requires-python = ">=3.12"
dependencies = [
    "dapr>=1.15.0",
    "dapr-ext-fastapi>=1.15.0",
    "dapr-ext-workflow>=1.15.0",
    "fastapi>=0.115.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.1",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]
