[project]
name = "upload"
version = "0.1.0"
description = "Upload service: accepts a document + extraction schema, stores the doc in blob storage and publishes a processing request"
requires-python = ">=3.12"
dependencies = [
    "dapr>=1.15.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
